# health-take-home

./: .gitignore  pyproject.toml  readme.md
docs/superpowers/plans/: 2026-05-08-prospective-simulation-harness.md
docs/superpowers/specs/: 2026-05-08-prospective-simulation-harness-design.md
src/prospective_harness/: __init__.py  api.py  attestation.py  calibration.py  dao.py  exceptions.py  hashing.py  models.py  sqlite_dao.py
tests/: test_api.py  test_attestation.py  test_calibration.py  test_hashing.py  test_package.py  test_sqlite_dao.py
