[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prospective-harness"
version = "0.2.0"
description = "Prospective prediction and tamper-evident attestation harness"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2,<3",
  "sqlalchemy>=2,<3",
  "numpy>=1.26",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
